--- a/WMS/WMS.csproj
+++ b/WMS/WMS.csproj
@@ -1540,6 +1540,12 @@
     <Content Include="Views\LoginLog\_PrintPartial.cshtml" />
     <Content Include="Views\SystemEventLog\_PrintPartial.cshtml" />
     <Content Include="Views\ExceptionalLog\_PrintPartial.cshtml" />
+    <Content Include="Views\HelpEdit\_SearchPartial.cshtml" />
+    <Content Include="Views\HelpEdit\_helpPartial1.cshtml" />
+    <Content Include="Views\HelpEdit\_helpPartial2.cshtml" />
+    <Content Include="Views\Help\_SearchPartial.cshtml" />
+    <Content Include="Views\Help\_helpPartial2.cshtml" />
+    <Content Include="Views\Help\_helpPartial1.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
