--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -9,8 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="AuthorizeContext" connectionString="DATA SOURCE=192.168.1.220:1521/orcl;PASSWORD=123456;PERSIST SECURITY INFO=True;POOLING=False;USER ID=hnxc"
-      providerName="Oracle.DataAccess.Client" />
+    <!--<add name="AuthorizeContext" connectionString="DATA SOURCE=10.129.19.2:1521/orcl;PASSWORD=123456;PERSIST SECURITY INFO=True;POOLING=False;USER ID=hnxc"
+      providerName="Oracle.DataAccess.Client" />-->
+    <add name="AuthorizeContext" connectionString="DATA SOURCE=192.168.1.81:1521/orcl;PASSWORD=123456;PERSIST SECURITY INFO=True;POOLING=False;USER ID=hnxc"
+  providerName="Oracle.DataAccess.Client" />
     <!--<add name="AuthorizeContext" connectionString="DATA SOURCE=oa;PASSWORD=123456;PERSIST SECURITY INFO=True;POOLING=False;USER ID=lmq" providerName="Oracle.DataAccess.Client" />-->
   
   </connectionStrings>
@@ -167,6 +169,7 @@
         <register type="THOK.Wms.Bll.Interfaces.IWMSPalletMasterService,THOK.Wms.Bll" mapTo="THOK.Wms.Bll.Service.WMSPalletMasterService,THOK.Wms.Bll" />
         <register type="THOK.Wms.Bll.Interfaces.IWMSBalanceMasterService,THOK.Wms.Bll" mapTo="THOK.Wms.Bll.Service.WMSBalanceMasterService,THOK.Wms.Bll" />
         <register type="THOK.Wms.Bll.Interfaces.IWMSBalanceDetailService,THOK.Wms.Bll" mapTo="THOK.Wms.Bll.Service.WMSBalanceDetailService,THOK.Wms.Bll" />
+        <register type="THOK.Wms.Bll.Interfaces.IWMSReplacemasterService,THOK.Wms.Bll" mapTo="THOK.Wms.Bll.Service.WMSReplacemasterService,THOK.Wms.Bll"/>
         
 
         <register type="THOK.Wms.Dal.Interfaces.IWMSFormulaDetailRepository, THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.WMSFormulaDetailRepository, THOK.Wms.Dal" />
@@ -193,13 +196,19 @@
         <register type="THOK.Wms.Dal.Interfaces.IWMSBalanceDetailRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.WMSBalanceDetailRepository,THOK.Wms.Dal" />
         <register type="THOK.Wms.Dal.Interfaces.ISysErrorCodeRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.SysErrorCodeRepository,THOK.Wms.Dal" />
         <register type="THOK.Wms.Dal.Interfaces.IWMSTaskrecordRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.WMSTaskrecordRepository,THOK.Wms.Dal" />
+        <register type="THOK.Wms.Dal.Interfaces.IWMSReplacemasterRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.WMSReplacemasterRepository,THOK.Wms.Dal" />
+        <register type="THOK.Wms.Dal.Interfaces.IWMSReplacedetailRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.WMSReplacedetailRepository,THOK.Wms.Dal" />
 
-        <!--WMS 条码打印-->
+        <!--WMS 条码打印,和一些视图-->
         <register type="THOK.Wms.Dal.Interfaces.IPrintReportRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.PrintReportRepository,THOK.Wms.Dal" />
         <register type="THOK.Wms.Dal.Interfaces.IWorkSelectRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.WorkSelectRepository,THOK.Wms.Dal" />
         <register type="THOK.Wms.Dal.Interfaces.IBillReportRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.BillReportRepository,THOK.Wms.Dal" />
+        <register type="THOK.Wms.Dal.Interfaces.IVIEWSTORAGERepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.VIEWSTORAGERepository,THOK.Wms.Dal" />
+        <register type="THOK.Wms.Dal.Interfaces.IViewbillmastRepository,THOK.Wms.Dal" mapTo="THOK.Wms.Dal.EntityRepository.ViewbillmastRepository,THOK.Wms.Dal" />
+        
 
         <register type="THOK.Wms.Bll.Interfaces.IBillReportService,THOK.Wms.Bll" mapTo="THOK.Wms.Bll.Service.BillReportService,THOK.Wms.Bll" />
+        <register type="THOK.Wms.Bll.Interfaces.IViewstorageService,THOK.Wms.Bll" mapTo="THOK.Wms.Bll.Service.ViewstorageService,THOK.Wms.Bll" />
         <!--<register type="FastReport.Web.Handlers.WebExport,FastReport.Web.Handlers" ></register>-->
         
       </container>
