--- a/THOK.Wms.Dal/THOK.Wms.Dal.csproj
+++ b/THOK.Wms.Dal/THOK.Wms.Dal.csproj
@@ -70,6 +70,8 @@
     <Compile Include="EntityRepository\SysBillTargetRepository.cs" />
     <Compile Include="EntityRepository\SysErrorCodeRepository.cs" />
     <Compile Include="EntityRepository\SysTableStateRepository.cs" />
+    <Compile Include="EntityRepository\ViewbillmastRepository.cs" />
+    <Compile Include="EntityRepository\VIEWSTORAGERepository.cs" />
     <Compile Include="EntityRepository\WCSTaskDetailHRepository.cs" />
     <Compile Include="EntityRepository\WCSTaskDetailRepository.cs" />
     <Compile Include="EntityRepository\WCSTaskHRepository.cs" />
@@ -88,6 +90,8 @@
     <Compile Include="EntityRepository\WMSProductionMasterRepository.cs" />
     <Compile Include="EntityRepository\WMSProductStateHRepository.cs" />
     <Compile Include="EntityRepository\WMSProductStateRepository.cs" />
+    <Compile Include="EntityRepository\WMSReplacedetailRepository.cs" />
+    <Compile Include="EntityRepository\WMSReplacemasterRepository.cs" />
     <Compile Include="EntityRepository\WMSScheduleDetailRepository.cs" />
     <Compile Include="EntityRepository\WMSScheduleMasterRepository.cs" />
     <Compile Include="EntityRepository\WMSScheduleRespository.cs" />
@@ -114,6 +118,8 @@
     <Compile Include="Interfaces\ISysBillTargetRepository.cs" />
     <Compile Include="Interfaces\ISysErrorCodeRepository.cs" />
     <Compile Include="Interfaces\ISysTableStateRepository.cs" />
+    <Compile Include="Interfaces\IViewbillmastRepository.cs" />
+    <Compile Include="Interfaces\IVIEWSTORAGERepository.cs" />
     <Compile Include="Interfaces\IWCSTaskDetailHRepository.cs" />
     <Compile Include="Interfaces\IWCSTaskDetailRepository.cs" />
     <Compile Include="Interfaces\IWCSTaskHRepository.cs" />
@@ -132,6 +138,8 @@
     <Compile Include="Interfaces\IWMSProductionMasterRepository.cs" />
     <Compile Include="Interfaces\IWMSProductStateHRepository.cs" />
     <Compile Include="Interfaces\IWMSProductStateRepository.cs" />
+    <Compile Include="Interfaces\IWMSReplacedetailRepository.cs" />
+    <Compile Include="Interfaces\IWMSReplacemasterRepository.cs" />
     <Compile Include="Interfaces\IWMSScheduleDetailRepository.cs" />
     <Compile Include="Interfaces\IWMSScheduleMasterRepository.cs" />
     <Compile Include="Interfaces\IWMSScheduleRepository.cs" />
