--- a/THOK.Wms.DbModel/THOK.Wms.DbModel.csproj
+++ b/THOK.Wms.DbModel/THOK.Wms.DbModel.csproj
@@ -86,6 +86,8 @@
     <Compile Include="Mapping\SYS_BILL_TARGETMap.cs" />
     <Compile Include="Mapping\SYS_ERROR_CODEMap.cs" />
     <Compile Include="Mapping\SYS_TABLE_STATEMap.cs" />
+    <Compile Include="Mapping\VIEW_BILL_MASTMap.cs" />
+    <Compile Include="Mapping\VIEW_STORAGEMap.cs" />
     <Compile Include="Mapping\WCS_TASKHMap.cs" />
     <Compile Include="Mapping\WCS_TASKMap.cs" />
     <Compile Include="Mapping\WCS_TASK_DETAILHMap.cs" />
@@ -104,6 +106,8 @@
     <Compile Include="Mapping\WMS_PRODUCTION_MASTERMap.cs" />
     <Compile Include="Mapping\WMS_PRODUCT_STATEHMap.cs" />
     <Compile Include="Mapping\WMS_PRODUCT_STATEMap.cs" />
+    <Compile Include="Mapping\WMS_REPLACE_DETAILMap.cs" />
+    <Compile Include="Mapping\WMS_REPLACE_MASTERMap.cs" />
     <Compile Include="Mapping\WMS_SCHEDULEMap.cs" />
     <Compile Include="Mapping\WMS_SCHEDULE_DETAILMap.cs" />
     <Compile Include="Mapping\WMS_SCHEDULE_MASTERMap.cs" />
@@ -114,6 +118,8 @@
     <Compile Include="SYS_BILL_TARGET.cs" />
     <Compile Include="SYS_ERROR_CODE.cs" />
     <Compile Include="SYS_TABLE_STATE.cs" />
+    <Compile Include="VIEW_BILL_MAST.cs" />
+    <Compile Include="VIEW_STORAGE.cs" />
     <Compile Include="WCS_TASK.cs" />
     <Compile Include="WCS_TASKH.cs" />
     <Compile Include="WCS_TASK_DETAIL.cs" />
@@ -132,6 +138,8 @@
     <Compile Include="WMS_PRODUCTION_MASTER.cs" />
     <Compile Include="WMS_PRODUCT_STATE.cs" />
     <Compile Include="WMS_PRODUCT_STATEH.cs" />
+    <Compile Include="WMS_REPLACE_DETAIL.cs" />
+    <Compile Include="WMS_REPLACE_MASTER.cs" />
     <Compile Include="WMS_SCHEDULE.cs" />
     <Compile Include="WMS_SCHEDULE_DETAIL.cs" />
     <Compile Include="WMS_SCHEDULE_MASTER.cs" />
